クリア条件を定義

--- a/timer_game.html
+++ b/timer_game.html
@@ -29,6 +29,7 @@
 <div>
     <div id="container">
         <h3>0秒でとめろ!!</h3>
+        <h3>誤差1.0秒以内でクリア！</h3>
 
         <!-- トップページ -->
         <div id="page1">
